@@ -1,3 +1,7 @@
+2007-08-07  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* Shape.cs: Fixed to pass a test.
+
 2007-08-06  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* Shape.cs: Added a call to pass a test.
